src/main/antlr4/es/uva/inf/grammar/.antlr/ModelParser.java
// Generated from c:\Users\Propietario\Documents\DOCUMENTOS-TFG\MVN\mvn\src\main\antlr4\es\u005Cuva\inf\grammar\Model.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ModelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, CommentOrEncoding=27, Group=28, Star=29, Div=30, Less=31, 
		LessEqual=32, Greater=33, GreaterEqual=34, Equal=35, TwoEqual=36, NotEqual=37, 
		Exclamation=38, DataEquationOp=39, StringAssignOp=40, Id=41, FloatingConstNumber=42, 
		FractionalConstant=43, ExponentPart=44, DigitSeq=45, StringLiteral=46, 
		StringConst=47, Keyword=48, Whitespace=49, Backslash=50, INFO_UNIT=51, 
		OtherCaracter=52;
	public static final int
		RULE_file = 0, RULE_model = 1, RULE_symbolWithDoc = 2, RULE_symbolWithDocDefinition = 3, 
		RULE_subscriptRange = 4, RULE_subscriptSequence = 5, RULE_subscriptMappingList = 6, 
		RULE_subscriptMapping = 7, RULE_equation = 8, RULE_lhs = 9, RULE_subscriptCopy = 10, 
		RULE_unchangeableConstant = 11, RULE_dataEquation = 12, RULE_lookupDefinition = 13, 
		RULE_constraint = 14, RULE_realityCheck = 15, RULE_stringAssign = 16, 
		RULE_macroDefinition = 17, RULE_sketchInfo = 18, RULE_sketches = 19, RULE_expr = 20, 
		RULE_exprAllowSign = 21, RULE_call = 22, RULE_macroHeader = 23, RULE_macroArguments = 24, 
		RULE_exprList = 25, RULE_subscriptValueList = 26, RULE_indexList = 27, 
		RULE_subscript = 28, RULE_lookup = 29, RULE_lookupRange = 30, RULE_lookupPointList = 31, 
		RULE_referenceLine = 32, RULE_lookupPoint = 33, RULE_constantLine = 34, 
		RULE_constList = 35, RULE_numberList = 36, RULE_subscriptId = 37, RULE_constVensim = 38, 
		RULE_integerConst = 39, RULE_floatingConst = 40, RULE_unitsDoc = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "model", "symbolWithDoc", "symbolWithDocDefinition", "subscriptRange", 
			"subscriptSequence", "subscriptMappingList", "subscriptMapping", "equation", 
			"lhs", "subscriptCopy", "unchangeableConstant", "dataEquation", "lookupDefinition", 
			"constraint", "realityCheck", "stringAssign", "macroDefinition", "sketchInfo", 
			"sketches", "expr", "exprAllowSign", "call", "macroHeader", "macroArguments", 
			"exprList", "subscriptValueList", "indexList", "subscript", "lookup", 
			"lookupRange", "lookupPointList", "referenceLine", "lookupPoint", "constantLine", 
			"constList", "numberList", "subscriptId", "constVensim", "integerConst", 
			"floatingConst", "unitsDoc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'('", "'-'", "')'", "'->'", "','", "':IGNORE:'", "':EXCEPT:'", 
			"'<->'", "':THE CONDITION:'", "':IMPLIES:'", "':TEST INPUT:'", "':MACRO:'", 
			"':END OF MACRO:'", "'---///'", "'Sketch information - do not modify anything except names'", 
			"'^'", "'+'", "':AND:'", "':OR:'", "'DELAYP('", "'TABBED ARRAY('", "'['", 
			"']'", "';'", "'|'", null, null, "'*'", "'/'", "'<'", "'<='", "'>'", 
			"'>='", "'='", "'=='", "'<>'", "'!'", "':='", "':IS:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "CommentOrEncoding", "Group", "Star", "Div", "Less", 
			"LessEqual", "Greater", "GreaterEqual", "Equal", "TwoEqual", "NotEqual", 
			"Exclamation", "DataEquationOp", "StringAssignOp", "Id", "FloatingConstNumber", 
			"FractionalConstant", "ExponentPart", "DigitSeq", "StringLiteral", "StringConst", 
			"Keyword", "Whitespace", "Backslash", "INFO_UNIT", "OtherCaracter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Model.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public ModelContext model() {
			return getRuleContext(ModelContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ModelParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			model();
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelContext extends ParserRuleContext {
		public SketchesContext sketches() {
			return getRuleContext(SketchesContext.class,0);
		}
		public List<SymbolWithDocContext> symbolWithDoc() {
			return getRuleContexts(SymbolWithDocContext.class);
		}
		public SymbolWithDocContext symbolWithDoc(int i) {
			return getRuleContext(SymbolWithDocContext.class,i);
		}
		public List<MacroDefinitionContext> macroDefinition() {
			return getRuleContexts(MacroDefinitionContext.class);
		}
		public MacroDefinitionContext macroDefinition(int i) {
			return getRuleContext(MacroDefinitionContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12 || _la==Id) {
				{
				setState(89);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Id:
					{
					setState(87);
					symbolWithDoc();
					}
					break;
				case T__12:
					{
					setState(88);
					macroDefinition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			sketches();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolWithDocContext extends ParserRuleContext {
		public SymbolWithDocDefinitionContext symbolWithDocDefinition() {
			return getRuleContext(SymbolWithDocDefinitionContext.class,0);
		}
		public UnitsDocContext unitsDoc() {
			return getRuleContext(UnitsDocContext.class,0);
		}
		public SymbolWithDocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolWithDoc; }
	}

	public final SymbolWithDocContext symbolWithDoc() throws RecognitionException {
		SymbolWithDocContext _localctx = new SymbolWithDocContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_symbolWithDoc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			symbolWithDocDefinition();
			setState(97);
			unitsDoc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolWithDocDefinitionContext extends ParserRuleContext {
		public LookupDefinitionContext lookupDefinition() {
			return getRuleContext(LookupDefinitionContext.class,0);
		}
		public SubscriptRangeContext subscriptRange() {
			return getRuleContext(SubscriptRangeContext.class,0);
		}
		public EquationContext equation() {
			return getRuleContext(EquationContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public UnchangeableConstantContext unchangeableConstant() {
			return getRuleContext(UnchangeableConstantContext.class,0);
		}
		public DataEquationContext dataEquation() {
			return getRuleContext(DataEquationContext.class,0);
		}
		public StringAssignContext stringAssign() {
			return getRuleContext(StringAssignContext.class,0);
		}
		public SubscriptCopyContext subscriptCopy() {
			return getRuleContext(SubscriptCopyContext.class,0);
		}
		public RealityCheckContext realityCheck() {
			return getRuleContext(RealityCheckContext.class,0);
		}
		public SymbolWithDocDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolWithDocDefinition; }
	}

	public final SymbolWithDocDefinitionContext symbolWithDocDefinition() throws RecognitionException {
		SymbolWithDocDefinitionContext _localctx = new SymbolWithDocDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_symbolWithDocDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(99);
				lookupDefinition();
				}
				break;
			case 2:
				{
				setState(100);
				subscriptRange();
				}
				break;
			case 3:
				{
				setState(101);
				equation();
				}
				break;
			case 4:
				{
				setState(102);
				constraint();
				}
				break;
			case 5:
				{
				setState(103);
				unchangeableConstant();
				}
				break;
			case 6:
				{
				setState(104);
				dataEquation();
				}
				break;
			case 7:
				{
				setState(105);
				stringAssign();
				}
				break;
			case 8:
				{
				setState(106);
				subscriptCopy();
				}
				break;
			case 9:
				{
				setState(107);
				realityCheck();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptRangeContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(ModelParser.Id, 0); }
		public SubscriptSequenceContext subscriptSequence() {
			return getRuleContext(SubscriptSequenceContext.class,0);
		}
		public SubscriptValueListContext subscriptValueList() {
			return getRuleContext(SubscriptValueListContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public SubscriptMappingListContext subscriptMappingList() {
			return getRuleContext(SubscriptMappingListContext.class,0);
		}
		public SubscriptRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptRange; }
	}

	public final SubscriptRangeContext subscriptRange() throws RecognitionException {
		SubscriptRangeContext _localctx = new SubscriptRangeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_subscriptRange);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(Id);
			setState(111);
			match(T__0);
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(112);
				subscriptSequence();
				}
				break;
			case 2:
				{
				setState(113);
				subscriptValueList();
				}
				break;
			case 3:
				{
				setState(114);
				call();
				}
				break;
			}
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(117);
				subscriptMappingList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptSequenceContext extends ParserRuleContext {
		public Token start;
		public Token end;
		public List<TerminalNode> Id() { return getTokens(ModelParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(ModelParser.Id, i);
		}
		public SubscriptSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptSequence; }
	}

	public final SubscriptSequenceContext subscriptSequence() throws RecognitionException {
		SubscriptSequenceContext _localctx = new SubscriptSequenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subscriptSequence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__1);
			setState(121);
			((SubscriptSequenceContext)_localctx).start = match(Id);
			setState(122);
			match(T__2);
			setState(123);
			((SubscriptSequenceContext)_localctx).end = match(Id);
			setState(124);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptMappingListContext extends ParserRuleContext {
		public List<SubscriptMappingContext> subscriptMapping() {
			return getRuleContexts(SubscriptMappingContext.class);
		}
		public SubscriptMappingContext subscriptMapping(int i) {
			return getRuleContext(SubscriptMappingContext.class,i);
		}
		public SubscriptMappingListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptMappingList; }
	}

	public final SubscriptMappingListContext subscriptMappingList() throws RecognitionException {
		SubscriptMappingListContext _localctx = new SubscriptMappingListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subscriptMappingList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__4);
			setState(127);
			subscriptMapping();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(128);
				match(T__5);
				setState(129);
				subscriptMapping();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptMappingContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(ModelParser.Id, 0); }
		public IndexListContext indexList() {
			return getRuleContext(IndexListContext.class,0);
		}
		public SubscriptMappingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptMapping; }
	}

	public final SubscriptMappingContext subscriptMapping() throws RecognitionException {
		SubscriptMappingContext _localctx = new SubscriptMappingContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_subscriptMapping);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Id:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(Id);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(T__1);
				setState(137);
				match(Id);
				setState(138);
				match(T__0);
				setState(139);
				indexList();
				setState(140);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationContext extends ParserRuleContext {
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public TerminalNode Equal() { return getToken(ModelParser.Equal, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ConstListContext constList() {
			return getRuleContext(ConstListContext.class,0);
		}
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public EquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equation; }
	}

	public final EquationContext equation() throws RecognitionException {
		EquationContext _localctx = new EquationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_equation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			lhs();
			setState(145);
			match(Equal);
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(146);
				expr(0);
				}
				break;
			case 2:
				{
				setState(147);
				constList();
				}
				break;
			}
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(150);
				match(T__6);
				setState(151);
				exprList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LhsContext extends ParserRuleContext {
		public SubscriptContext indexes;
		public TerminalNode Id() { return getToken(ModelParser.Id, 0); }
		public TerminalNode Keyword() { return getToken(ModelParser.Keyword, 0); }
		public List<SubscriptContext> subscript() {
			return getRuleContexts(SubscriptContext.class);
		}
		public SubscriptContext subscript(int i) {
			return getRuleContext(SubscriptContext.class,i);
		}
		public LhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lhs; }
	}

	public final LhsContext lhs() throws RecognitionException {
		LhsContext _localctx = new LhsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lhs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(Id);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__22) {
				{
				setState(155);
				((LhsContext)_localctx).indexes = subscript();
				}
			}

			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Keyword) {
				{
				setState(158);
				match(Keyword);
				}
			}

			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(161);
				match(T__7);
				setState(162);
				subscript();
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(163);
					match(T__5);
					setState(164);
					subscript();
					}
					}
					setState(169);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptCopyContext extends ParserRuleContext {
		public Token copy;
		public Token original;
		public List<TerminalNode> Id() { return getTokens(ModelParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(ModelParser.Id, i);
		}
		public SubscriptCopyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptCopy; }
	}

	public final SubscriptCopyContext subscriptCopy() throws RecognitionException {
		SubscriptCopyContext _localctx = new SubscriptCopyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_subscriptCopy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			((SubscriptCopyContext)_localctx).copy = match(Id);
			setState(173);
			match(T__8);
			setState(174);
			((SubscriptCopyContext)_localctx).original = match(Id);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnchangeableConstantContext extends ParserRuleContext {
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public TerminalNode TwoEqual() { return getToken(ModelParser.TwoEqual, 0); }
		public ConstListContext constList() {
			return getRuleContext(ConstListContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public TerminalNode Keyword() { return getToken(ModelParser.Keyword, 0); }
		public UnchangeableConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unchangeableConstant; }
	}

	public final UnchangeableConstantContext unchangeableConstant() throws RecognitionException {
		UnchangeableConstantContext _localctx = new UnchangeableConstantContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_unchangeableConstant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			lhs();
			setState(177);
			match(TwoEqual);
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__17:
			case FloatingConstNumber:
			case DigitSeq:
			case StringConst:
				{
				setState(178);
				constList();
				}
				break;
			case Id:
				{
				setState(179);
				call();
				}
				break;
			case Keyword:
				{
				setState(180);
				match(Keyword);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataEquationContext extends ParserRuleContext {
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public TerminalNode DataEquationOp() { return getToken(ModelParser.DataEquationOp, 0); }
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ConstListContext constList() {
			return getRuleContext(ConstListContext.class,0);
		}
		public DataEquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataEquation; }
	}

	public final DataEquationContext dataEquation() throws RecognitionException {
		DataEquationContext _localctx = new DataEquationContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_dataEquation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			lhs();
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DataEquationOp) {
				{
				setState(184);
				match(DataEquationOp);
				setState(187);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(185);
					expr(0);
					}
					break;
				case 2:
					{
					setState(186);
					constList();
					}
					break;
				}
				}
			}

			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(191);
				match(T__6);
				setState(192);
				exprList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LookupDefinitionContext extends ParserRuleContext {
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public LookupContext lookup() {
			return getRuleContext(LookupContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public NumberListContext numberList() {
			return getRuleContext(NumberListContext.class,0);
		}
		public LookupDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lookupDefinition; }
	}
